--- a/style.css
+++ b/style.css
@@ -487,6 +487,7 @@ position: relative;
     position: absolute;
     left: -100%;
     z-index: 4;
+    transition: left 0.8s ease-in-out;
 }
 .right{
     width: 100%;
@@ -520,7 +521,47 @@ position: relative;
 
 @media (max-width:813px){
     .search_right{
-        /* display: none; */
+        display: none;
         width: 30%;
+    }
+    .cross{
+        display: block;
+    }
+    .hamburger {
+        display: block;
+        position: fixed;
+        left: 22px;
+        display: block;
+    }
+    .popular-artists{
+        display: none;
+    }
+    .navbar{
+        display: none;
+    }
+    .text{
+        display: none;
+    }
+    .right{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        width: 99%;
+        height:99%;
+    }
+    .controlbar {
+        width: 96%;
+        height: 50px;
+        position: absolute;
+        top: 40%;
+        left: auto;
+        
+    }
+    .playbar{
+        position: absolute;
+        width: 93%;
+        top: 70%;
+        left: 18px;
     }
 }
